# CMakeCatchMPI

./: LICENSE.txt  README.md
Code/CommandLineApps/: CMakeLists.txt  ccmpiISend.cpp  ccmpiSSend.cpp  ccmpiSend.cpp
Code/Lib/: ccmpiMyFunctions.cpp  ccmpiMyFunctions.h
Testing/: CMakeLists.txt  ccmpiBroadcastTest.cpp  ccmpiExampleMPITest.cpp  ccmpiMyFunctionsTest.cpp  ccmpiP2PTest.cpp  ccmpiReduceTest.cpp  ccmpiRingTest.cpp  ccmpiScatterTest.cpp  ccmpiSplitTest.cpp
